corrected alignment of login button

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ p {
   line-height: 20px;
 }
 button {
-  background: linear-gradient(#648ea2, #648eaf);
+  background: linear-gradient(#648eaf, #1c5380);
   border-radius: 4px;
   border: 1px solid #06365f;
   padding: 6px;
@@ -71,9 +71,15 @@ button {
 .content {
 
 }
-.right {
+.login {
   float: right;
   text-align: center;
+}
+#login {
+  line-height: 22px;
+  vertical-align: 5px;
+  color: white;
+  font-size: 1.1em;
 }
 .appstore-images {
   margin: 30px 0;
